--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My profile</title>
+        <title>Blog</title>
     </head>
     <body>
         <main>
@@ -15,14 +15,10 @@
                 <a href = "dashboard.html">Dashboard</a>
                 <a href = "faq.html">FAQ</a>
                 <a href = "blog.html">Blog</a>
+                <a href = "post.html">Post</a>
             </nav>
             <article>
-                <h1>Personal information</h1>
-                <p>Elmar<br>16<br>Biezelinge</p>
-            </article>
-            <article>
-                <h1>Extra-curricular activities</h1>
-                <p>I work at Aldi<br>One of my hobby's is gaming.</p>
+                <h1>Blog</h1>
             </article>
         </main>
     </body>
