--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="style.css">
+        <title>Home</title>
+        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Home</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     </head>
     <body>
         <main>
-            <nav>
-                <a href = "index.html">Home</a>
+            <nav class="menu">
+                <a href = "index.html" class="active">Home</a>
                 <a href = "profile.html">Profile</a>
                 <a href = "dashboard.html">Dashboard</a>
                 <a href = "faq.html">FAQ</a>
