--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,12 @@
     </head>
     <body>
         <main>
-            <nav>
+             <nav class="menu">
                 <a href = "index.html">Home</a>
                 <a href = "profile.html">Profile</a>
                 <a href = "dashboard.html">Dashboard</a>
                 <a href = "faq.html">FAQ</a>
-                <a href = "blog.html">Blog</a>
-                <a href = "post.html">Post</a>
+                <a href = "blog.html" class="active">Blog</a>
             </nav>
             <article>
                 <h1>Blog</h1>
