--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <title>Home</title>
         
@@ -9,8 +10,11 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     </head>
+
     <body>
+
         <main>
+
             <nav class="menu">
                 <a href = "index.html" class="active">Home</a>
                 <a href = "profile.html">Profile</a>
@@ -21,6 +25,14 @@
             <article>
                 <h1>Home</h1>
             </article>
+
         </main>
+        
+        <footer>
+            <p>© 2025 | Elmar van Loenhout<br>
+            <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+        </footer>
+
     </body>
+
 </html>
