--- a/profile.html
+++ b/profile.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <main>
-            <nav>
+            <nav class="menu">
                 <a href = "index.html">Home</a>
-                <a href = "profile.html">Profile</a>
+                <a href = "profile.html" class="active">Profile</a>
                 <a href = "dashboard.html">Dashboard</a>
                 <a href = "faq.html">FAQ</a>
                 <a href = "blog.html">Blog</a>
