--- a/dashboard.html
+++ b/dashboard.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <main>
-            <nav>
+            <nav class="menu">
                 <a href = "index.html">Home</a>
                 <a href = "profile.html">Profile</a>
-                <a href = "dashboard.html">Dashboard</a>
+                <a href = "dashboard.html" class="active">Dashboard</a>
                 <a href = "faq.html">FAQ</a>
                 <a href = "blog.html">Blog</a>
             </nav>
