--- a/faq.html
+++ b/faq.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <main>
-            <nav>
+            <nav class="menu">
                 <a href = "index.html">Home</a>
                 <a href = "profile.html">Profile</a>
                 <a href = "dashboard.html">Dashboard</a>
-                <a href = "faq.html">FAQ</a>
+                <a href = "faq.html" class="active">FAQ</a>
                 <a href = "blog.html">Blog</a>
             </nav>
             <article>
