--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     <body>
 
+        <header>
+            <a href="index.html">
+                <img src="favicon/favicon_original.png" width="10%">
+            </a>
+        </header>
+
         <main>
 
             <nav class="menu">
@@ -22,14 +28,15 @@
                 <a href = "faq.html">FAQ</a>
                 <a href = "blog.html">Blog</a>
             </nav>
-            <article>
+            <article class="base">
                 <h1>Home</h1>
+                <p>Hoi ik ben Elmar en dit is mijn website</p>
             </article>
 
         </main>
         
         <footer>
-            <p>© 2025 | Elmar van Loenhout<br>
+            <p>© 2025 | Elmar van Loenhout
             <a href="mailto:loen0029@hz.nl">Send mail</a></p>
         </footer>
 
