--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <link rel="stylesheet" href="style.css">
+        <title>Profile</title>
+        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My profile</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     </head>
+
     <body>
+
+        <header>
+            <a href="index.html">
+                <img src="favicon/favicon_original.png" width="200">
+            </a>
+        </header>
+
         <main>
+
             <nav class="menu">
                 <a href = "index.html">Home</a>
                 <a href = "profile.html" class="active">Profile</a>
@@ -16,14 +28,21 @@
                 <a href = "faq.html">FAQ</a>
                 <a href = "blog.html">Blog</a>
             </nav>
-            <article>
-                <h1>Personal information</h1>
-                <p>Elmar<br>16<br>Biezelinge</p>
+            <article class="base">
+                <h1>Profile</h1><br>
+                <h2>Personal information</h2>
+                <p>My name is Elmar, i'm 16 years old, and i live in Biezelinge.</p><br>
+                <h2>Extra-curricular activities</h2>
+                <p>I work at Aldi, and one of my hobby's is gaming.</p>
             </article>
-            <article>
-                <h1>Extra-curricular activities</h1>
-                <p>I work at Aldi<br>One of my hobby's is gaming.</p>
-            </article>
+
         </main>
+        
+        <footer>
+            <p>© 2025 | Elmar van Loenhout
+            <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+        </footer>
+
     </body>
+
 </html>
