--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
                 <a href = "faq.html">FAQ</a>
                 <a href = "blog.html">Blog</a>
             </nav>
-            <article class="base">
-                <h1>Home</h1>
-                <p>Hoi ik ben Elmar en dit is mijn website</p>
-            </article>
+
+            <div class="base">
+                <article>
+                    <h1>Home</h1>
+                    <p>Hoi ik ben Elmar en dit is mijn website<br><br><br><br>test<br><br><br>test</p>
+                </article>  
+            </div>
+            
 
         </main>
         
