--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 
         <header>
             <a href="index.html">
-                <img src="favicon/favicon_original.png" width="200">
+                <img src="favicon/favicon_original.png" width="10%">
             </a>
         </header>
 
@@ -30,9 +30,9 @@
             </nav>
             <article class="base">
                 <h1>Profile</h1><br>
-                <h2>Personal information</h2>
+                <h3>Personal information</h3>
                 <p>My name is Elmar, i'm 16 years old, and i live in Biezelinge.</p><br>
-                <h2>Extra-curricular activities</h2>
+                <h3>Extra-curricular activities</h3>
                 <p>I work at Aldi, and one of my hobby's is gaming.</p>
             </article>
 
