--- a/faq.html
+++ b/faq.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>FAQ</title>
-    </head>
-    <body>
-        <main>
-            <nav class="menu">
-                <a href = "index.html">Home</a>
-                <a href = "profile.html">Profile</a>
-                <a href = "dashboard.html">Dashboard</a>
-                <a href = "faq.html" class="active">FAQ</a>
-                <a href = "blog.html">Blog</a>
-            </nav>
-            <article>
-                <h1>FAQ</h1>
-            </article>
-        </main>
-    </body>
+
+<head>
+    <title>FAQ</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+</head>
+
+<body>
+    <header>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"></a>
+    </header>
+
+    <nav class="menu">
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "profile.html">Profile</a></li>
+            <li><a href = "dashboard.html">Dashboard</a></li>
+            <li><a href = "faq.html" class="active">FAQ</a></li>
+            <li><a href = "blog.html">Blog</a></li>
+        </ul>      
+    </nav>
+
+    <main>
+        <section>
+            <h1>FAQ</h1>
+        </section>
+
+    </main>
+        
+    <footer>
+        <p>&copy; 2025 | Elmar van Loenhout |
+        <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+    </footer>
+
+</body>
 </html>
