--- a/profile.html
+++ b/profile.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <title>Profile</title>
+<head>
+    <title>Profile</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+</head>
+
+<body>
+    <header>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"></a>
+    </header>
+
+    <nav class="menu">
+        <ul>
+            <li><a href = "index.html">Home</a></li>
+            <li><a href = "profile.html" class="active">Profile</a></li>
+            <li><a href = "dashboard.html">Dashboard</a></li>
+            <li><a href = "faq.html">FAQ</a></li>
+            <li><a href = "blog.html">Blog</a></li>
+        </ul>      
+    </nav>
+
+    <main>
+        <section>
+            <h1>Profile</h1>
+            <h3>Personal information</h3>
+            <p>My name is Elmar, I'm 16 years old, and I'm from the Netherlands. I live in Biezelinge (Zeeland, Netherlands).<br>
+            De reden dat ik zo jong ben, is omdat ik op de basisschool groep 2 over heb geslagen, en daarna de Havo in een keer heb gehaald.
+            </p>
+            <h3>Extra-curricular activities</h3>
+            <p>Ik werk bij de Aldi, en soms help ik mee in het bedrijf van mijn vader. Hij heeft een eigen bedrijf, gespecialiseerd in licht, geluid en beeldtechniek. Zowel voor installatie als verhuur, voor bijvoorbeeld evenementen.<br>
+            Mijn hobby's zijn gamen, Netflix kijken, en ik ben erg geinteresseerd in het werk in de evenementensector. Ook mag je mij 's nachts wakker maken om voor de 500ste keer de serie 'Breaking Bad' te kijken.
+            </p>
+            <img src="images/brba" alt="Breaking Bad" width="500">
+            <h3>Mijn eigenschappen</h3>
+            <ul>
+                <li>Slim</li>
+                <li>Grappig</li>
+                <li>Aardig</li>
+            </ul>
+            <h3>Links</h3>
+            <ul>
+                <li><a href="https://github.com/ellemaj" target="_blank">Github</a></li>
+                <li><a href="https://open.spotify.com/user/myp7uhtvaupdg3je0cq6et6q0?si=c4fa36011353421a" target="_blank">Spotify</a></li>
+            </ul>
+        </section>
+
+    </main>
         
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
-    </head>
+    <footer>
+        <p>&copy; 2025 | Elmar van Loenhout |
+        <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+    </footer>
 
-    <body>
-
-        <header>
-            <a href="index.html">
-                <img src="favicon/favicon_original.png" width="10%">
-            </a>
-        </header>
-
-        <main>
-
-            <nav class="menu">
-                <a href = "index.html">Home</a>
-                <a href = "profile.html" class="active">Profile</a>
-                <a href = "dashboard.html">Dashboard</a>
-                <a href = "faq.html">FAQ</a>
-                <a href = "blog.html">Blog</a>
-            </nav>
-            <article class="base">
-                <h1>Profile</h1><br>
-                <h3>Personal information</h3>
-                <p>My name is Elmar, i'm 16 years old, and i live in Biezelinge.</p><br>
-                <h3>Extra-curricular activities</h3>
-                <p>I work at Aldi, and one of my hobby's is gaming.</p>
-            </article>
-
-        </main>
-        
-        <footer>
-            <p>© 2025 | Elmar van Loenhout
-            <a href="mailto:loen0029@hz.nl">Send mail</a></p>
-        </footer>
-
-    </body>
-
+</body>
 </html>
