--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,9 @@
     </nav>
 
     <main>
+        <aside>
+            <p>five hundred cigarettes.... ping</p>
+        </aside>
         <section>
             <h1>Dashboard</h1>
         </section>
