--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"></a>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%" alt="blauwe emoji met duimpjes omhoog"></a>
     </header>
 
     <nav class="menu">
@@ -28,11 +28,11 @@
     <main>
         <section>
             <h1>Profile</h1>
-            <h3>Personal information</h3>
-            <p>My name is Elmar, I'm 16 years old, and I'm from the Netherlands. I live in Biezelinge (Zeeland, Netherlands).<br>
+            <h3>Persoonlijke informatie</h3>
+            <p>Ik ben Elmar, ik ben 16 jaar oud, en ik kom uit Nederland. Ik woon in Biezelinge (Zeeland).<br>
             De reden dat ik zo jong ben, is omdat ik op de basisschool groep 2 over heb geslagen, en daarna de Havo in een keer heb gehaald.
             </p>
-            <h3>Extra-curricular activities</h3>
+            <h3>Wat meer informatie over mezelf</h3>
             <p>Ik werk bij de Aldi, en soms help ik mee in het bedrijf van mijn vader. Hij heeft een eigen bedrijf, gespecialiseerd in licht, geluid en beeldtechniek. Zowel voor installatie als verhuur, voor bijvoorbeeld evenementen.<br>
             Mijn hobby's zijn gamen, Netflix kijken, en ik ben erg geinteresseerd in het werk in de evenementensector. Ook mag je mij 's nachts wakker maken om voor de 500ste keer de serie 'Breaking Bad' te kijken.
             </p>
@@ -45,7 +45,7 @@
             </ul>
             <h3>Links</h3>
             <ul>
-                <li><a href="https://github.com/ellemaj" target="_blank">Github</a></li>
+                <li><a href="https://github.com/ellemaj" target="_blank" class="links">Github</a></li>
                 <li><a href="https://open.spotify.com/user/myp7uhtvaupdg3je0cq6et6q0?si=c4fa36011353421a" target="_blank">Spotify</a></li>
             </ul>
         </section>
