--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-        <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+        <a href="mailto:loen0029@hz.nl">Contact</a></p>
     </footer>
 
 </body>
