--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
             </ul>
             <h3>Links</h3>
             <ul>
-                <li><a href="https://github.com/ellemaj" target="_blank" class="links">Github</a></li>
+                <li><a href="https://github.com/ellemaj" target="_blank">Github</a></li>
                 <li><a href="https://open.spotify.com/user/myp7uhtvaupdg3je0cq6et6q0?si=c4fa36011353421a" target="_blank">Spotify</a></li>
             </ul>
         </section>
@@ -54,7 +54,7 @@
         
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-        <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+        <a href="mailto:loen0029@hz.nl">Contact</a></p>
     </footer>
 
 </body>
