--- a/post.html
+++ b/post.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.cs">
     <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
 
@@ -35,7 +35,7 @@
         
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-        <a href="mailto:loen0029@hz.nl">Send mail</a></p>
+        <a href="mailto:loen0029@hz.nl">Contact</a></p>
     </footer>
 
 </body>
