--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,26 @@
         
         <section class="dashboard_section">
             <h1>Dashboard</h1>
-            <br><br><br><br><br>
+            <table>
+                <tr>
+                    <th>Blok</th>
+                    <th>Course</th>
+                    <th>Exam</th>
+                    <th>Cijfer</th>
+                    <th>EC</th>
+                </tr>
+                <tr>
+                    <td>Blok 1</td>
+                    <td>PCO</td>
+                    <td>Germany</td>
+                </tr>
+                <tr>
+                    <td>Blok 2</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                </tr>
+            </table>
+            <br><br><br><br><br><br><br><br><br><br>
         </section>
 
     </main>
