--- a/dashboard.html
+++ b/dashboard.html
@@ -45,22 +45,118 @@
                 <tr>
                     <th>Blok</th>
                     <th>Course</th>
-                    <th>Exam</th>
-                    <th>Cijfer</th>
                     <th>EC</th>
+                    <th>Examen</th>
+                    <th>Cijfer</th>
+                </tr>
+                <!-- Blok 1 -->
+                <tr>
+                    <td rowspan="3">1</td>
+                    <td>Program- & Career Orientation</td>
+                    <td>2.5</td>
+                    <td>Presentatie</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Blok 1</td>
-                    <td>PCO</td>
-                    <td>Germany</td>
+                    <td>Computer Science Basics</td>
+                    <td>5</td>
+                    <td>Schriftelijke Kennistoets</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <td>Blok 2</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
+                    <td>Programming Basics</td>
+                    <td>5</td>
+                    <td>Casustoets</td>
+                    <td>-</td>
+                </tr>
+                <!-- Blok 2 -->
+                <tr>
+                    <td rowspan="2">2</td>
+                    <td rowspan="2">Object-Oriented Programming</td>
+                    <td>5</td>
+                    <td>Presentatie</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Schriftelijke Kennistoets</td>
+                    <td>-</td>
+                </tr>
+                <!--blok 3-->
+                <tr>
+                    <td rowspan="4">3</td>
+                    <td rowspan="3">Framework Project 1</td>
+                    <td>5</td>
+                    <td>On-site Casustoets</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>2.5</td>
+                    <td>Groepspresentatie project resultaat</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>2.5</td>
+                    <td>Groepsportfolio op requirements</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>Business Understanding Basics</td>
+                    <td>2.5</td>
+                    <td>Video</td>
+                    <td>-</td>
+                </tr>
+                <!--blok 4-->
+                <tr>
+                    <td rowspan="3">4</td>
+                    <td rowspan="3">Framework Project 2</td>
+                    <td>5</td>
+                    <td>IT-ontwikkelingsportfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>2.5</td>
+                    <td>Final Delivery</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>2.5</td>
+                    <td>Individueel Project Assessment</td>
+                    <td>-</td>
+                </tr>
+                <!--Door het jaar heen-->
+                <tr>
+                    <td rowspan="5">Gedurende het jaar</td>
+                    <td>IT Personality 1</td>
+                    <td>1.25</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>IT Personality 2</td>
+                    <td>1.25</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>IT Personality International Week</td>
+                    <td>1.25</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>IT Personality Projectweek 1</td>
+                    <td>1.25</td>
+                    <td>Portfolio</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>Personal Professional Development Exploration</td>
+                    <td>12.5</td>
+                    <td>Criterium Focused Interview</td>
+                    <td>-</td>
                 </tr>
             </table>
-            <br><br><br><br><br><br><br><br><br><br>
         </section>
 
     </main>
