--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <title>Home</title>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Website, HTML, CSS, HZ, HBO-ICT, ICT opleiding, Elmar, Home">
+    <meta name="author" content="Elmar van Loenhout">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
@@ -17,31 +19,41 @@
 
     <nav class="menu">
         <ul>
-            <li><a href = "index.html" class="active">Home</a></li>
-            <li><a href = "profile.html">Profile</a></li>
-            <li><a href = "dashboard.html">Dashboard</a></li>
-            <li><a href = "faq.html">FAQ</a></li>
-            <li><a href = "blog.html">Blog</a></li>
-        </ul>      
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
     </nav>
 
     <main>
         <section>
             <h1>Home</h1>
-            <p>Hoi ik ben Elmar en dit is mijn website! Op deze pagina leg ik uit waarom ik voor de studie HBO-ICT bij de HZ heb gekozen.</p>
+            <p>Hoi ik ben Elmar en dit is mijn website! Op deze pagina leg ik uit waarom ik voor de studie HBO-ICT bij
+                de HZ heb gekozen.
+            </p>
+
             <h3>HBO-ICT</h3>
-            <p>Op de middelbare school heb ik in havo 4, en havo 5 het vak informatica gevolgd. Hier heb ik al met meerdere programmeertalen gewerkt, en dit beviel mij altijd er goed.<br>
-            Ook vond ik deze lessen altijd erg leuk. Dit is een van de redenen waarom ik voor deze studie heb gekozen. 2 jaar geleden heb ik dan ook al een website gemaakt, die over hacken ging. Zie afbeelding.</p>
+            <p>Op de middelbare school heb ik in havo 4, en havo 5 het vak informatica gevolgd. Hier heb ik al met
+                meerdere programmeertalen gewerkt, en dit beviel mij altijd er goed.<br>
+                Ook vond ik deze lessen altijd erg leuk. Dit is een van de redenen waarom ik voor deze studie heb
+                gekozen. 2 jaar geleden heb ik dan ook al een website gemaakt, die over hacken ging. Zie afbeelding.
+            </p>
             <img src="images/hackenenzo.png" alt="Website 'Hacken enzo'" width="500"><br>
-            <p>Ik denk dat ik zeker geschikt ben voor deze opleiding, en dit werkveld, omdat het coderen mij erg goed ligt.</p>
+            <p>Ik denk dat ik zeker geschikt ben voor deze opleiding, en dit werkveld, omdat het coderen mij erg goed
+                ligt.
+            </p>
         </section>
 
     </main>
-        
+
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-        <a href="mailto:loen0029@hz.nl">Contact</a></p>
+            <a href="mailto:loen0029@hz.nl">Contact</a>
+        </p>
     </footer>
 
 </body>
+
 </html>
