--- a/faq.html
+++ b/faq.html
@@ -4,6 +4,9 @@
 <head>
     <title>FAQ</title>
     <meta charset="UTF-8">
+    <meta name="keywords"
+        content="Website, HTML, CSS, HZ, HBO-ICT, ICT opleiding, Elmar, FAQ, Veelgestelde vragen, Vragen, Antwoorden">
+    <meta name="author" content="Elmar van Loenhout">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
@@ -17,12 +20,12 @@
 
     <nav class="menu">
         <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "profile.html">Profile</a></li>
-            <li><a href = "dashboard.html">Dashboard</a></li>
-            <li><a href = "faq.html" class="active">FAQ</a></li>
-            <li><a href = "blog.html">Blog</a></li>
-        </ul>      
+            <li><a href="index.html">Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="faq.html" class="active">FAQ</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
     </nav>
 
     <main>
@@ -31,48 +34,63 @@
 
             <details>
                 <summary>Hoe kan je een document printen vanaf je laptop op de HZ?</summary>
-                <p>Om documenten te printen bij HZ moet je laptop verbonden zijn met het HZ-netwerk. Je kunt het document vervolgens naar een van de campusprinters sturen. 
-                    Mogelijk moet je eerst de printerdrivers of speciale software van HZ installeren. Zodra alles is ingesteld, kun je vanaf je laptop printen naar de beschikbare printers op de campus.
+                <p>Om documenten te printen bij HZ moet je laptop verbonden zijn met het HZ-netwerk. Je kunt het
+                    document vervolgens naar een van de campusprinters sturen.
+                    Mogelijk moet je eerst de printerdrivers of speciale software van HZ installeren. Zodra alles is
+                    ingesteld, kun je vanaf je laptop printen naar de beschikbare printers op de campus.
                 </p>
             </details>
 
             <details>
                 <summary>Hoe kan je een document scannen en naar je laptop sturen op de HZ?</summary>
-                <p>Het scannen van documenten kan meestal via de multifunctionele printers op de campus. Stappen: Leg het document op de scanner (met de tekst naar beneden). 
-                    Kies de optie ‘Scan’ op het scherm van de printer. Kies waar het gescande bestand naartoe moet, bijvoorbeeld je e-mail of cloudopslag. 
-                    Volg de instructies op het scherm om het scannen te voltooien. Zorg dat je toegang hebt tot het netwerk of de benodigde diensten om het bestand naar je laptop te sturen.
+                <p>Het scannen van documenten kan meestal via de multifunctionele printers op de campus. Stappen: Leg
+                    het document op de scanner (met de tekst naar beneden).
+                    Kies de optie ‘Scan’ op het scherm van de printer. Kies waar het gescande bestand naartoe moet,
+                    bijvoorbeeld je e-mail of cloudopslag.
+                    Volg de instructies op het scherm om het scannen te voltooien. Zorg dat je toegang hebt tot het
+                    netwerk of de benodigde diensten om het bestand naar je laptop te sturen.
                 </p>
             </details>
 
             <details>
-                <summary>Hoe kan ik iets kopen (bijvoorbeeld als ik inscrhijf voor het introductie event van IT) op de HZ webshop?</summary>
-                <p>Ga naar de officiële HZ-webshop. Zoek het item of evenement waarvoor je je wilt inschrijven. Voeg het toe aan je winkelmandje en ga naar de kassa. 
-                    Vul de gevraagde betaalgegevens in en rond de aankoop af. Voor evenementen zoals het IT-introductie-evenement moet je binnen de opgegeven periode inschrijven en eventuele extra instructies volgen.
+                <summary>Hoe kan ik iets kopen (bijvoorbeeld als ik inscrhijf voor het introductie event van IT) op de
+                    HZ webshop?</summary>
+                <p>Ga naar de officiële HZ-webshop. Zoek het item of evenement waarvoor je je wilt inschrijven. Voeg het
+                    toe aan je winkelmandje en ga naar de kassa.
+                    Vul de gevraagde betaalgegevens in en rond de aankoop af. Voor evenementen zoals het
+                    IT-introductie-evenement moet je binnen de opgegeven periode inschrijven en eventuele extra
+                    instructies volgen.
                 </p>
             </details>
 
             <details>
                 <summary>Hoe kan je een projectruimte boeken?</summary>
-                <p>Projectruimtes bij HZ kunnen worden gereserveerd via het interne boekingssysteem of door contact op te nemen met de juiste afdeling. 
-                    Beschikbaarheid kan verschillen per locatie en tijd. Check de HZ-faciliteitenpagina of neem contact op met de administratie voor specifieke informatie over het reserveren van een projectruimte.
+                <p>Projectruimtes bij HZ kunnen worden gereserveerd via het interne boekingssysteem of door contact op
+                    te nemen met de juiste afdeling.
+                    Beschikbaarheid kan verschillen per locatie en tijd. Check de HZ-faciliteitenpagina of neem contact
+                    op met de administratie voor specifieke informatie over het reserveren van een projectruimte.
                 </p>
             </details>
 
             <details>
                 <summary>Wat moet je doen als je je auto wilt parkeren op de HZ parkeerplaats?</summary>
-                <p>Parkeren direct bij de HZ op Het Groene Woud is niet mogelijk. Er is 1 speciale parkeerplaats op het terrein beschikbaar voor mensen met een beperking en/of chronische aandoening. 
-                    De parkeerplaats aan de Kousteensedijk heeft een aantal parkeerplaatsen voor bezoekers, medewerkers en studenten van Het Groene Woud. Deze parkeerplaats ligt op 8 minuten loopafstand van de HZ. 
+                <p>Parkeren direct bij de HZ op Het Groene Woud is niet mogelijk. Er is 1 speciale parkeerplaats op het
+                    terrein beschikbaar voor mensen met een beperking en/of chronische aandoening.
+                    De parkeerplaats aan de Kousteensedijk heeft een aantal parkeerplaatsen voor bezoekers, medewerkers
+                    en studenten van Het Groene Woud. Deze parkeerplaats ligt op 8 minuten loopafstand van de HZ.
                     Op vertoon van uw inrijkaart kunt u bij de servicebalie van het JRCZ een uitrijkaart krijgen.
                 </p>
             </details>
         </section>
 
     </main>
-        
+
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Contact</a></p>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Contact</a>
+        </p>
     </footer>
 
 </body>
+
 </html>
