--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,8 @@
 <head>
     <title>Profile</title>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Website, HTML, CSS, HZ, HBO-ICT, ICT opleiding, Elmar, Profile, Profiel, About us">
+    <meta name="author" content="Elmar van Loenhout">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
@@ -12,17 +14,18 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="favicon/favicon_original.png" width="10%" alt="blauwe emoji met duimpjes omhoog"></a>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"
+                alt="blauwe emoji met duimpjes omhoog"></a>
     </header>
 
     <nav class="menu">
         <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "profile.html" class="active">Profile</a></li>
-            <li><a href = "dashboard.html">Dashboard</a></li>
-            <li><a href = "faq.html">FAQ</a></li>
-            <li><a href = "blog.html">Blog</a></li>
-        </ul>      
+            <li><a href="index.html">Home</a></li>
+            <li><a href="profile.html" class="active">Profile</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
     </nav>
 
     <main>
@@ -30,32 +33,44 @@
             <h1>Profile</h1>
             <h3>Persoonlijke informatie</h3>
             <p>Ik ben Elmar, ik ben 16 jaar oud, en ik kom uit Nederland. Ik woon in Biezelinge (Zeeland).<br>
-            De reden dat ik zo jong ben, is omdat ik op de basisschool groep 2 over heb geslagen, en daarna de Havo in een keer heb gehaald.
+                De reden dat ik zo jong ben, is omdat ik op de basisschool groep 2 over heb geslagen, en daarna de Havo
+                in een keer heb gehaald.
             </p>
+
             <h3>Wat meer informatie over mezelf</h3>
-            <p>Ik werk bij de Aldi, en soms help ik mee in het bedrijf van mijn vader. Hij heeft een eigen bedrijf, gespecialiseerd in licht, geluid en beeldtechniek. Zowel voor installatie als verhuur, voor bijvoorbeeld evenementen.<br>
-            Mijn hobby's zijn gamen, Netflix kijken, en ik ben erg geinteresseerd in het werk in de evenementensector. Ook mag je mij 's nachts wakker maken om voor de 500ste keer de serie 'Breaking Bad' te kijken.
+            <p>Ik werk bij de Aldi, en soms help ik mee in het bedrijf van mijn vader. Hij heeft een eigen bedrijf,
+                gespecialiseerd in licht, geluid en beeldtechniek. Zowel voor installatie als verhuur, voor bijvoorbeeld
+                evenementen.<br>
+                Mijn hobby's zijn gamen, Netflix kijken, en ik ben erg geinteresseerd in het werk in de
+                evenementensector. Ook mag je mij 's nachts wakker maken om voor de 500ste keer de serie 'Breaking Bad'
+                te kijken.
             </p>
             <img src="images/brba" alt="Breaking Bad" width="500">
+
             <h3>Mijn eigenschappen</h3>
             <ul>
-                <li>Slim</li>
-                <li>Grappig</li>
-                <li>Aardig</li>
+                <li>Ik ben behulpzaam</li>
+                <li>Ik vind het leuk om complexe problemen op te lossen</li>
+                <li>Ik ben aardig</li>
             </ul>
+
             <h3>Links</h3>
             <ul>
                 <li><a href="https://github.com/ellemaj" target="_blank">Github</a></li>
-                <li><a href="https://open.spotify.com/user/myp7uhtvaupdg3je0cq6et6q0?si=c4fa36011353421a" target="_blank">Spotify</a></li>
+                <li><a href="https://open.spotify.com/user/myp7uhtvaupdg3je0cq6et6q0?si=c4fa36011353421a"
+                        target="_blank">Spotify</a></li>
+                <li><a href="https://discord.com/users/689099253926068241" target="blank">Discord</a></li>
             </ul>
         </section>
 
     </main>
-        
+
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-        <a href="mailto:loen0029@hz.nl">Contact</a></p>
+            <a href="mailto:loen0029@hz.nl">Contact</a>
+        </p>
     </footer>
 
 </body>
+
 </html>
