--- a/dashboard.html
+++ b/dashboard.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <title>Dashboard</title>
     <meta charset="UTF-8">
+    <meta name="keywords"
+        content="Website, HTML, CSS, HZ, HBO-ICT, ICT opleiding, Elmar, Dashboard, Opleiding, Voortgang, Toetsen, EC, Studiepunten, Vakken, Blokken, Examens, Cijfers, NBSA">
+    <meta name="author" content="Elmar van Loenhout">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +15,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"></a>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%" alt="Logo"></a>
     </header>
 
     <nav class="menu">
@@ -40,7 +43,7 @@
         </aside>
         
         <section class="dashboard_section">
-            <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="15%"></a>
+            <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="15%" alt="HZ logo"></a>
             
             <table>
                 <tr>
