--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <title>FAQ</title>
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"></a>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%" alt="Logo"></a>
     </header>
 
     <nav class="menu">
