--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="favicon/favicon_original.png" width="10%"></a>
+        <a href="index.html"><img src="favicon/favicon_original.png" width="10%" alt="Logo"></a>
     </header>
 
     <nav class="menu">
