--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
 
     
 
-    <main>
+    <main class="dashboard-layout">
         <aside class="side_menu">
             <h4>Handige links</h4>
             <ul>
