--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
         </aside>
         
         <section class="dashboard_section">
-            <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="15%" alt="HZ logo"></a>
+            <h1>Dashboard TEST</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="15%" alt="HZ logo"></a>
             
             <table>
                 <tr>
