--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-            <a href="mailto:loen0029@hz.nl">Contact</a>
+            <a href="mailto:loen0029@hz.nl">Contact</a> |
+            <a href="sitemap.html">Sitemap</a>
         </p>
     </footer>
 
