--- a/faq.html
+++ b/faq.html
@@ -87,7 +87,8 @@
 
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Contact</a>
+            <a href="mailto:loen0029@hz.nl">Contact</a> |
+            <a href="sitemap.html">Sitemap</a>
         </p>
     </footer>
 
