--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
                 evenementensector. Ook mag je mij 's nachts wakker maken om voor de 500ste keer de serie 'Breaking Bad'
                 te kijken.
             </p>
-            <img src="images/brba" alt="Breaking Bad" width="500">
+            <img src="images/brba.jpeg" alt="Breaking Bad" width="500">
 
             <h3>Mijn eigenschappen</h3>
             <ul>
@@ -67,7 +67,8 @@
 
     <footer>
         <p>&copy; 2025 | Elmar van Loenhout |
-            <a href="mailto:loen0029@hz.nl">Contact</a>
+            <a href="mailto:loen0029@hz.nl">Contact</a> |
+            <a href="sitemap.html">Sitemap</a>
         </p>
     </footer>
 
