--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
 
 
 
-    <main class="dashboard-layout">
+    <main>
         <aside class="side_menu">
             <h4>Handige links</h4>
             <ul>
@@ -43,136 +43,137 @@
                 <li><a href="https://github.com/HZ-HBO-ICT" target="_blank">GitHub-omgeving HBO-ICT</a></li>
             </ul>
         </aside>
+        <section class="dashboard-layout">
+            <section class="dashboard_section">
+                <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="300"
+                        alt="HZ logo"></a>
 
-        <section class="dashboard_section">
-            <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="300"
-                    alt="HZ logo"></a>
+                <table>
+                    <tr>
+                        <th>Blok</th>
+                        <th>Vakken</th>
+                        <th>EC</th>
+                        <th>Examen</th>
+                        <th>Cijfer</th>
+                    </tr>
+                    <!-- Blok 1 -->
+                    <tr class="bezig">
+                        <td rowspan="3">1</td>
+                        <td>Program- & Career Orientation</td>
+                        <td>2.5</td>
+                        <td>Presentatie</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Computer Science Basics</td>
+                        <td>5</td>
+                        <td>Schriftelijke Kennistoets</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Programming Basics</td>
+                        <td>5</td>
+                        <td>Casustoets</td>
+                        <td>-</td>
+                    </tr>
+                    <!-- Blok 2 -->
+                    <tr>
+                        <td rowspan="2">2</td>
+                        <td rowspan="2">Object-Oriented Programming</td>
+                        <td>5</td>
+                        <td>Presentatie</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Schriftelijke Kennistoets</td>
+                        <td>-</td>
+                    </tr>
+                    <!--blok 3-->
+                    <tr>
+                        <td rowspan="4">3</td>
+                        <td rowspan="3">Framework Project 1</td>
+                        <td>5</td>
+                        <td>On-site Casustoets</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>2.5</td>
+                        <td>Groepspresentatie project resultaat</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>2.5</td>
+                        <td>Groepsportfolio op requirements</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Business Understanding Basics</td>
+                        <td>2.5</td>
+                        <td>Video</td>
+                        <td>-</td>
+                    </tr>
+                    <!--blok 4-->
+                    <tr>
+                        <td rowspan="3">4</td>
+                        <td rowspan="3">Framework Project 2</td>
+                        <td>5</td>
+                        <td>IT-ontwikkelingsportfolio</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>2.5</td>
+                        <td>Final Delivery</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>2.5</td>
+                        <td>Individueel Project Assessment</td>
+                        <td>-</td>
+                    </tr>
+                    <!--NBSA grens-->
+                    <tr rowspan="4" class="nbsa_grens">
+                        <td>NBSA-grens</td>
+                        <td></td>
+                        <td>= 45</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
 
-            <table>
-                <tr>
-                    <th>Blok</th>
-                    <th>Vakken</th>
-                    <th>EC</th>
-                    <th>Examen</th>
-                    <th>Cijfer</th>
-                </tr>
-                <!-- Blok 1 -->
-                <tr class="bezig">
-                    <td rowspan="3">1</td>
-                    <td>Program- & Career Orientation</td>
-                    <td>2.5</td>
-                    <td>Presentatie</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Computer Science Basics</td>
-                    <td>5</td>
-                    <td>Schriftelijke Kennistoets</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Programming Basics</td>
-                    <td>5</td>
-                    <td>Casustoets</td>
-                    <td>-</td>
-                </tr>
-                <!-- Blok 2 -->
-                <tr>
-                    <td rowspan="2">2</td>
-                    <td rowspan="2">Object-Oriented Programming</td>
-                    <td>5</td>
-                    <td>Presentatie</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Schriftelijke Kennistoets</td>
-                    <td>-</td>
-                </tr>
-                <!--blok 3-->
-                <tr>
-                    <td rowspan="4">3</td>
-                    <td rowspan="3">Framework Project 1</td>
-                    <td>5</td>
-                    <td>On-site Casustoets</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>2.5</td>
-                    <td>Groepspresentatie project resultaat</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>2.5</td>
-                    <td>Groepsportfolio op requirements</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Business Understanding Basics</td>
-                    <td>2.5</td>
-                    <td>Video</td>
-                    <td>-</td>
-                </tr>
-                <!--blok 4-->
-                <tr>
-                    <td rowspan="3">4</td>
-                    <td rowspan="3">Framework Project 2</td>
-                    <td>5</td>
-                    <td>IT-ontwikkelingsportfolio</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>2.5</td>
-                    <td>Final Delivery</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>2.5</td>
-                    <td>Individueel Project Assessment</td>
-                    <td>-</td>
-                </tr>
-                <!--NBSA grens-->
-                <tr rowspan="4" class="nbsa_grens">
-                    <td>NBSA-grens</td>
-                    <td></td>
-                    <td>= 45</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-
-                <!--Door het jaar heen-->
-                <tr>
-                    <td rowspan="5">Gedurende het jaar</td>
-                    <td>IT Personality 1</td>
-                    <td>1.25</td>
-                    <td>Portfolio</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>IT Personality 2</td>
-                    <td>1.25</td>
-                    <td>Portfolio</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>IT Personality International Week</td>
-                    <td>1.25</td>
-                    <td>Portfolio</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>IT Personality Projectweek 1</td>
-                    <td>1.25</td>
-                    <td>Portfolio</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>Personal Professional Development Exploration</td>
-                    <td>12.5</td>
-                    <td>Criterium Focused Interview</td>
-                    <td>-</td>
-                </tr>
-            </table>
+                    <!--Door het jaar heen-->
+                    <tr>
+                        <td rowspan="5">Gedurende het jaar</td>
+                        <td>IT Personality 1</td>
+                        <td>1.25</td>
+                        <td>Portfolio</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>IT Personality 2</td>
+                        <td>1.25</td>
+                        <td>Portfolio</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>IT Personality International Week</td>
+                        <td>1.25</td>
+                        <td>Portfolio</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>IT Personality Projectweek 1</td>
+                        <td>1.25</td>
+                        <td>Portfolio</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Personal Professional Development Exploration</td>
+                        <td>12.5</td>
+                        <td>Criterium Focused Interview</td>
+                        <td>-</td>
+                    </tr>
+                </table>
+            </section>
         </section>
 
     </main>
