--- a/dashboard.html
+++ b/dashboard.html
@@ -64,13 +64,13 @@
                         <td>Presentatie</td>
                         <td>-</td>
                     </tr>
-                    <tr>
+                    <tr class="bezig">
                         <td>Computer Science Basics</td>
                         <td>5</td>
                         <td>Schriftelijke Kennistoets</td>
                         <td>-</td>
                     </tr>
-                    <tr>
+                    <tr class="bezig">
                         <td>Programming Basics</td>
                         <td>5</td>
                         <td>Casustoets</td>
@@ -173,6 +173,13 @@
                         <td>-</td>
                     </tr>
                 </table>
+
+                <h2>Voortgang studiepunten:</h2>
+                <div class="progress-bar">
+                    <div class="progress"></div>
+                    <div class="nbsa-marker"></div>
+                </div>
+                <p>0 / 60 EC behaald</p>
             </section>
         </section>
 
