--- a/dashboard.html
+++ b/dashboard.html
@@ -30,26 +30,21 @@
         </ul>
     </nav>
 
-
-
     <main>
         <aside class="side_menu">
             <h4>Handige links</h4>
             <ul>
-                <li><a href="https://oer.hz.nl/9b1081fb-c060-4091-bb2b-ae39ccf8456a" target="_blank">HBO-ICT CER</a>
-                </li>
-                <li><a href="https://oer.hz.nl/93eee6aa-2bc1-454c-a56a-f8b56c62ba9f">HBO-ICT IR</a></li>
-                <li><a href="https://learn.hz.nl/course/view.php?id=23602#section-0" target="_blank">Learn - PCO</a>
-                </li>
-                <li><a href="https://hz.osiris-student.nl/voortgang" taget="_blank">Study Progess (Osiris)</a></li>
+                <li><a href="https://oer.hz.nl/9b1081fb-c060-4091-bb2b-ae39ccf8456a" target="_blank">HBO-ICT CER</a></li>
+                <li><a href="https://oer.hz.nl/93eee6aa-2bc1-454c-a56a-f8b56c62ba9f" target="_blank">HBO-ICT IR</a></li>
+                <li><a href="https://learn.hz.nl/course/view.php?id=23602#section-0" target="_blank">Learn - PCO</a></li>
+                <li><a href="https://hz.osiris-student.nl/voortgang" target="_blank">Study Progess (Osiris)</a></li>
                 <li><a href="https://github.com/HZ-HBO-ICT" target="_blank">GitHub-omgeving HBO-ICT</a></li>
             </ul>
         </aside>
         <section class="dashboard-layout">
             <section class="dashboard_section">
-                <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="300"
-                        alt="HZ logo"></a>
-
+                <h1>Dashboard</h1><a href="https://hz.nl" target="_blank"><img src="images/hzlogo_groot.png" width="300" alt="HZ logo"></a>
+                <h2>Overzicht van jaar 1:</h2>
                 <table>
                     <tr>
                         <th>Blok</th>
