--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-    <title>Profile</title>
+    <title>Profiel</title>
     <meta charset="UTF-8">
     <meta name="keywords" content="Website, HTML, CSS, HZ, HBO-ICT, ICT opleiding, Elmar, Profile, Profiel, About us">
     <meta name="author" content="Elmar van Loenhout">
@@ -30,7 +30,7 @@
 
     <main>
         <section>
-            <h1>Profile</h1>
+            <h1>Profiel</h1>
             <h3>Persoonlijke informatie</h3>
             <p>Ik ben Elmar, ik ben 16 jaar oud, en ik kom uit Nederland. Ik woon in Biezelinge (Zeeland).<br>
                 De reden dat ik zo jong ben, is omdat ik op de basisschool groep 2 over heb geslagen, en daarna de Havo
