--- a/dashboard.html
+++ b/dashboard.html
@@ -78,7 +78,7 @@
                         <td>Casustoets</td>
                         <td>-</td>
                     </tr>
-                    
+
                     <!-- Blok 2 -->
                     <tr>
                         <td rowspan="2">2</td>
@@ -176,7 +176,8 @@
                     <div class="progress"></div>
                     <div class="nbsa-marker"></div>
                 </div>
-                <p>0 / 60 EC behaald</p> <!-- bij invullen van cijfer in de td, wordt deze tekst automatisch aangepast-->
+                <p>0 / 60 EC behaald</p>
+                <!-- bij invullen van cijfer in de td, wordt deze tekst automatisch aangepast-->
             </section>
         </section>
 
